2008-08-28  Zoltan Varga  <vargaz@gmail.com>

	* scripts/Makefile.am (scripts_2_0): Add gacutil2.

	* scripts/gacutil2: New file.

2008-08-22  Jb Evain  <jbevain@novell.com>

	* data/wcf.pc.in
	* data/Makefile.am
	* configure.in: add a new wcf.pc for assemblies recently moved
	from olive to mcs.

2008-08-12  Bill Holmes  <billholmes54@gmail.com>

	* winconfig.h:  Updating the config file for MSVC builds to match
 	  the config file used when compiling with gcc in Cygwin.

	Contributed under MIT/X11 license.

2008-08-09  Rodrigo Kumpera  <rkumpera@novell.com>

	* docs/generic-sharing: Some updates from an irc talk with Mark.

2008-08-06  Zoltan Varga  <vargaz@gmail.com>

	* Makefile.am (EXTRA_DIST): Add dtrace-prelink.sh and build-mingw32.sh.

	* scripts/Makefile.am (EXTRA_DIST): Add patch-quiet.sh.

2008-08-05  Marek Habersack  <mhabersack@novell.com>

	* configure.in: use the PKG_CONFIG_PATH only when cross-compiling.

2008-08-05  Marek Habersack  <mhabersack@novell.com>

	* configure.in: added support for cross-compilation

2008-08-05  Marek Habersack  <mhabersack@novell.com>

	* build-mingw32.sh: added a script to build Mono for Windows on a
	Linux host using mingw.

2008-08-05  Marek Habersack  <mhabersack@novell.com>

	* scripts/Makefile.am: added support for cross-compilation,
	including .bat generation for windows targets.

2008-08-05  Marek Habersack  <mhabersack@novell.com>

	* scripts/smcs.bat.in, scripts/script.bat.in,
	scripts/script_umask.bat.in: added .bat templates.

2008-08-05  Marek Habersack  <mhabersack@novell.com>

	* runtime/Makefile.am: mingw cross-compilation support.

2008-08-05  Andreas Färber  <andreas.faerber@web.de>

	* autogen.sh: Suppress arguments warning for NOCONFIGURE.
	
	Contributed under MIT/X11 license.

2008-08-02  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Enable dtrace by default on platforms which support it.

2008-07-27  Zoltan Varga  <vargaz@gmail.com>
